--- a/src/app/Restaurateur/menu/menu.component.html
+++ b/src/app/Restaurateur/menu/menu.component.html
@@ -2,9 +2,13 @@
 <section class="home-section">
 <!-- debut du contenu de la page blog dashboard admin -->
 <div>
-    <h3 class="text-center mt-2 fw-bold titremere-blog">Listes des plats</h3>
+  <div *ngIf="isMenuandPlats">
+    <h3 class="text-center mt-2 fw-bold titremere-blog" >Listes des plats</h3>
     <div class="d-flex justify-content-between">
-        <button class="btn fw-bold  boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Ajouter un plat</button>
+      <div>
+        <button class="btn fw-bold  boutonajouter-blog me-4" data-bs-toggle="modal" data-bs-target="#ajoutplat" (click)="toggleForm()">Ajouter menu</button>
+        <button class="btn fw-bold  boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat" >Ajouter un plat</button>
+      </div>
         <div class="search">
           <div class="input-group mb-3">
               <input type="text" class="form-control inputPorteur" placeholder="Chercher un plat">
@@ -13,8 +17,25 @@
       </div>
     </div>
   </div>
+  <div *ngIf="!isMenuandPlats">
+    <h3 class="text-center mt-2 fw-bold titremere-blog" >Listes des menu</h3>
+    <div class="d-flex justify-content-between">
+      <div>
+        <button class="btn fw-bold  boutonajouter-blog me-4" data-bs-toggle="modal" data-bs-target="#ajoutplat">Ajouter menu</button>
+        <button class="btn fw-bold  boutonajouter-blog " data-bs-toggle="modal" data-bs-target="#ajoutplat" (click)="toggleForm()">Ajouter un plat</button>
+      </div>
+        <div class="search">
+          <div class="input-group mb-3">
+              <input type="text" class="form-control inputPorteur" placeholder="Chercher un plat">
+              <button class="input-group-text iconsearch" id="basic-addon1"><i class="bi bi-search"></i></button>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+  
   <!-- les contenue de la page avec les carte -->
-  <div class="container mt-4 mb-5">
+  <!-- <div class="container mt-4 mb-5">
   <div class="row">
     <div class="col-12 col-md-4">
       <div class="card border mb-2 rounded-4 ">
@@ -92,7 +113,26 @@
       </div>
     </div>
   </div>
-  </div>
+  </div> -->
+  <div class="container mt-4 mb-5">
+    <div class="row">
+      <div class="col-12 col-md-4" *ngFor="let plat of  plats ">
+        <div class="card border mb-2 rounded-4 ">
+          <img [src]="plat.photo" class="img-fluid" alt="Image plat">
+          <div class="bodyplat px-4">
+            <h3 class="mt-3 text-center">{{ plat.titre }}</h3>
+            <p class="limited-height">{{ plat.description }}</p>
+            <div class="btnplat mb-3 d-flex justify-content-center">
+              <button class="btn boutondetails-blog" (click)="showPlatDetails()" data-bs-toggle="modal" data-bs-target="#detailArticle">Détails</button>
+              <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editArticleModal"
+                (click)="editPlat()">Modifier</button>
+              <button class="btn  boutonsupprim-plat" (click)="deletePlat()">Supprimer</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
   <!-- les contenue de la page avec les carte -->
   
   <!-- fin du contenu de la page blog dashboard admin -->
