--- a/src/app/Module/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/Module/dashboard-admin/dashboard-admin.component.html
@@ -64,7 +64,7 @@
   <section class="home-section">
   <nav>
     <div class="sidebar-button">
-      <i class="bx bx-menu sidebarBtn"></i>
+      <i class="bi bi-list sidebarBtn bx bx-menu"></i>
       <span class="dashboard">Dashboard</span>
     </div>
     <div class="search-box">
