--- a/src/app/Module/login/login.component.html
+++ b/src/app/Module/login/login.component.html
@@ -50,8 +50,11 @@
     <div class="panel left-panel">
       <div class="content">
         <div class="left-panel-content">
-          <h3 *ngIf="isSignIn">Nouveau ici ?</h3>
-          <p *ngIf="isSignIn">
+          <div *ngIf="isSignIn">
+            <p><img style="width: 60px;" routerLink="/accueil"  src="https://s3-alpha-sig.figma.com/img/39be/b32f/ac2c6e08b43e58bf83b95d2c4762e576?Expires=1707091200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=G6mg7sz2QY1B8RwelnpHJGiYzbnx~r9hG0Tml0hOucziA7vXreYYSRQZFxQ1cO8wLaoUuqCBXLb9tttvCw7Q5AaUPOtlyGh8JZUJQEiWF3IqMMwwrpsDxi4fJ69NjgmuI8y6wHwsloH3jSR7DSzKhf54Cc4VvWwL6AxdJ~yywxWqK8~uNTckyRBC7g9vC5SThVEk6wtndDvpfeANxTxO9AC1WUHSmsZLTcvS9YxktBoKmhn~ppgHKjv-8Qk3huWMobXrz1Lvz1-P-K-qgW1fw5Q99PiV4tJPPX6CxjMI43RcVoUpUkzmCvypncOMcPbC8~qXG0r96dMAc7KIbF4ujA__" alt=""></p>
+            <h3>Nouveau ici ?</h3>
+          </div>
+            <p *ngIf="isSignIn">
             Merci de vous inscrire, votre participation est cruciale pour améliorer notre plateforme et offrir une expérience optimale à chacun.
           </p>
           <button class="btn transparent" (click)="toggleForm()">
@@ -66,7 +69,10 @@
       <div class="content">
         <div class="right-panel-content">
           <div>
-            <h3 *ngIf="!isSignIn">Avez-vous un compte</h3>
+            <div *ngIf="!isSignIn">
+              <p><img style="width: 60px;" routerLink="/accueil" src="https://s3-alpha-sig.figma.com/img/39be/b32f/ac2c6e08b43e58bf83b95d2c4762e576?Expires=1707091200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=G6mg7sz2QY1B8RwelnpHJGiYzbnx~r9hG0Tml0hOucziA7vXreYYSRQZFxQ1cO8wLaoUuqCBXLb9tttvCw7Q5AaUPOtlyGh8JZUJQEiWF3IqMMwwrpsDxi4fJ69NjgmuI8y6wHwsloH3jSR7DSzKhf54Cc4VvWwL6AxdJ~yywxWqK8~uNTckyRBC7g9vC5SThVEk6wtndDvpfeANxTxO9AC1WUHSmsZLTcvS9YxktBoKmhn~ppgHKjv-8Qk3huWMobXrz1Lvz1-P-K-qgW1fw5Q99PiV4tJPPX6CxjMI43RcVoUpUkzmCvypncOMcPbC8~qXG0r96dMAc7KIbF4ujA__" alt=""></p>
+              <h3 >Avez-vous un compte</h3>
+            </div>
             <p *ngIf="!isSignIn">
               Votre fidélité contribue à l'amélioration constante de nos services pour vous offrir une expérience toujours plus satisfaisante.
             </p>
