--- a/src/app/Utilisateur/profil/profil.component.html
+++ b/src/app/Utilisateur/profil/profil.component.html
@@ -1,1 +1,15 @@
-<p>profil works!</p>
+<div class="row">
+    <div class="col-lg-12 border-danger">
+        <div class="card d-flex justify-content-between">
+            <div class="border-black">
+                <img src="/assets/image 100.png" alt="">
+                <p>Nom complet</p>
+            </div>
+                <button class="btn-danger">editer son profil</button>
+        </div>
+    </div>
+    <div class="col-lg-12 border-black">
+        <div class=""></div>
+    </div>
+
+</div>
