--- a/src/app/Administrateur/accueil-admin/accueil-admin.component.html
+++ b/src/app/Administrateur/accueil-admin/accueil-admin.component.html
@@ -4,17 +4,6 @@
     <div class="overview-boxes">
       <div class="box">
         <div class="right-side">
-          <div class="box-topic">Total Order</div>
-          <div class="number">40,876</div>
-          <div class="indicator">
-            <i class="bx bx-up-arrow-alt"></i>
-            <span class="text">Up from yesterday</span>
-          </div>
-        </div>
-        <i class="bx bx-cart-alt cart"></i>
-      </div>
-      <div class="box">
-        <div class="right-side">
           <div class="box-topic">Total Sales</div>
           <div class="number">38,876</div>
           <div class="indicator">
@@ -49,3 +38,5 @@
     </div>
   </div>
 </section>
+
+<router-outlet></router-outlet>
