--- a/src/app/Module/dasboard-resto/dasboard-resto.component.html
+++ b/src/app/Module/dasboard-resto/dasboard-resto.component.html
@@ -1,40 +1,35 @@
- <div class="sidebar">
+<div class="sidebar">
     <div class="logo-details">
       <i class="bx bxl-c-plus-plus"></i>
       <span class="logo_name">EasyLeek</span>
     </div>
     <ul class="nav-links">
+      
       <li>
-        <a href="#" routerLink="/adminSysteme">
-          <i class="bx bx-grid-alt"></i>
-          <span class="links_name">Dashboard</span>
+        <a href="#" routerLink="/menuResto">
+          <i class="bx bx-book-alt"></i>
+          <span class="links_name">Gestion menu</span>
         </a>
       </li>
       <li>
-        <a href="#" routerLink="/adminCategorie">
-          <i class="bx bx-box"></i>
-          <span class="links_name">Gestion Categorie</span>
+        <a href="#" routerLink="/gestionPlat">
+          <i class="bx bx-book-alt"></i>
+          <span class="links_name">Gestion plat</span>
+        </a>
+      </li>
+
+      <li>
+        <a href="#" routerLink="/commandeResto">
+          <i class="bx bx-user"></i>
+          <span class="links_name">Gestion commande</span>
         </a>
       </li>
       <li>
-        <a href="#" routerLink="/adminClient">
-          <i class="bx bx-list-ul"></i>
-          <span class="links_name">Gestion client</span>
+        <a href="#" routerLink="/commentairesResto">
+          <i class="bx bx-message"></i>
+          <span class="links_name">Commentaires</span>
         </a>
       </li>
-      <li>
-        <a href="#" routerLink="/adminRestaurant">
-          <i class="bx bx-list-ul"></i>
-          <span class="links_name">Gestion Restaurateur</span>
-        </a>
-      </li>
-      <li>
-        <a href="#" routerLink="/adminMessage">
-          <i class="bx bx-list-ul"></i>
-          <span class="links_name">Messages</span>
-        </a>
-      </li>
-  
       <li class="log_out" >
         <a href="#" (click)="logout()">
           <i class="bx bx-log-out"></i>
@@ -62,3 +57,4 @@
   </section>
 
   
+
