--- a/src/app/Module/header/header.component.css
+++ b/src/app/Module/header/header.component.css
@@ -128,8 +128,8 @@ a {
 
 @media only screen and (min-width: 30.1em) {
     .menu li {
-        float: left;
-        width: 50%;
+        /* float: left; */
+        /* width: 50%; */
     }
 }
 
