--- a/src/app/Restaurateur/commande/commande.component.html
+++ b/src/app/Restaurateur/commande/commande.component.html
@@ -1,4 +1,4 @@
-<app-dashboard-admin></app-dashboard-admin>
+<app-dasboard-resto></app-dasboard-resto>
 <section class="home-section">
 <div>
     <h3 class="text-center mt-2 fw-bold titremere-blog">Les commandes</h3>
