--- a/src/app/Restaurateur/commentaire/commentaire.component.html
+++ b/src/app/Restaurateur/commentaire/commentaire.component.html
@@ -1,4 +1,4 @@
-<app-dashboard-admin></app-dashboard-admin>
+<app-dasboard-resto></app-dasboard-resto>
 <section class="home-section">
     <p>commentaire </p>
 </section>
