--- a/src/app/Utilisateur/propos/propos.component.html
+++ b/src/app/Utilisateur/propos/propos.component.html
@@ -1,4 +1,17 @@
 <app-header></app-header>
+<!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner carouselBaniere">
+    <div class="carousel-item h-100 active">
+      <img src="../../../assets/banierplats.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil" >
+    </div>
+    <div class="carousel-item h-100 ">
+      <img src="../../../assets/baniertout.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil">
+    </div>
+    <div class="carousel-item h-100">
+      <img src="../../../assets/baniersucre.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil">
+    </div>
+  </div>
+</div> -->
 <div class="row row-cols-1 row-cols-md-1 row-cols-lg-1">
     <!-- section qui sommes nous  -->
 <div class="col">
