--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
 <!-- <app-accueil></app-accueil> -->
 <!-- <app-contact></app-contact> -->
 <!-- <app-restaurant></app-restaurant> -->
+<!-- <app-ajouteplat></app-ajouteplat> -->
 <router-outlet></router-outlet>
 
