--- a/src/app/Module/dasboard-resto/dasboard-resto.component.css
+++ b/src/app/Module/dasboard-resto/dasboard-resto.component.css
@@ -5,16 +5,85 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-
-.contenumilieux{
+.sidebar{
+  position: fixed;
+  height: 100%;
+  width: 240px;
+  background: #5D3C22;
+  transition: all 0.5s ease;
+}
+.sidebar.active{
+  width: 60px;
+}
+.sidebar .logo-details{
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
+.sidebar .logo-details i{
+  font-size: 28px;
+  font-weight: 500;
+  color: #fff;
+  min-width: 60px;
+  text-align: center
+}
+.sidebar .logo-details .logo_name{
+  color: #fff;
+  font-size: 24px;
+  font-weight: 500;
+}
+.sidebar .nav-links{
+  margin-top: 10px;
+}
+.sidebar .nav-links li{
+  position: relative;
+  list-style: none;
+  height: 50px;
+}
+.sidebar .nav-links li a{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.4s ease;
+}
+.sidebar .nav-links li a.active{
+  background: #FFA07A;
+}
+.sidebar .nav-links li a:hover{
+  background: #FFA07A;
+}
+.sidebar .nav-links li i{
+  min-width: 60px;
+  text-align: center;
+  font-size: 18px;
+  color: #fff;
+}
+.sidebar .nav-links li a .links_name{
+  color: #fff;
+  font-size: 15px;
+  font-weight: 400;
+  white-space: nowrap;
+}
+.sidebar .nav-links .log_out{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+.home-section{
   position: relative;
   background: #f5f5f5;
-  min-height: 100vh;
+  min-height: 10vh;
   width: calc(100% - 240px);
   left: 240px;
   transition: all 0.5s ease;
 }
-.contenumilieux nav{
+.sidebar.active ~ .home-section{
+  width: calc(100% - 60px);
+  left: 60px;
+}
+.home-section nav{
   display: flex;
   justify-content: space-between;
   height: 80px;
@@ -29,8 +98,21 @@
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   transition: all 0.5s ease;
 }
-
-.contenumilieux nav .search-box{
+.sidebar.active ~ .home-section nav{
+  left: 60px;
+  width: calc(100% - 60px);
+}
+.home-section nav .sidebar-button{
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  font-weight: 500;
+}
+nav .sidebar-button i{
+  font-size: 35px;
+  margin-right: 10px;
+}
+.home-section nav .search-box{
   position: relative;
   height: 50px;
   max-width: 550px;
@@ -62,7 +144,7 @@ nav .search-box .bx-search{
   font-size: 22px;
   transition: all 0.4 ease;
 }
-.contenumilieux nav .profile-details{
+.home-section nav .profile-details{
   display: flex;
   align-items: center;
   background: #F5F6FA;
@@ -89,7 +171,7 @@ nav .profile-details i{
   font-size: 25px;
   color: #333;
 }
-.contenumilieux .home-content{
+.home-section .home-content{
   position: relative;
   padding-top: 104px;
 }
@@ -264,13 +346,28 @@ nav .profile-details i{
 }
 /* Responsive Media Query */
 @media (max-width: 1240px) {
-  .contenumilieux{
+  .sidebar{
+    width: 60px;
+  }
+  .sidebar.active{
+    width: 220px;
+  }
+  .home-section{
     width: calc(100% - 60px);
     left: 60px;
   }
-  .contenumilieux nav{
+  .sidebar.active ~ .home-section{
+    left: 220px;
+    width: calc(100% - 220px);
+    overflow: hidden;
+  }
+  .home-section nav{
     width: calc(100% - 60px);
     left: 60px;
+  }
+  .sidebar.active ~ .home-section nav{
+    width: calc(100% - 220px);
+    left: 220px;
   }
 }
 @media (max-width: 1150px) {
@@ -293,7 +390,12 @@ nav .profile-details i{
   }
 }
 @media (max-width: 700px) {
-  .contenumilieux nav .profile-details{
+  nav .sidebar-button .dashboard,
+  nav .profile-details .admin_name,
+  nav .profile-details i{
+    display: none;
+  }
+  .home-section nav .profile-details{
     height: 50px;
     min-width: 40px;
   }
@@ -306,10 +408,31 @@ nav .profile-details i{
     width: 100%;
     margin-bottom: 15px;
   }
+  .sidebar.active ~ .home-section nav .profile-details{
+    display: none;
+  }
 }
 @media (max-width: 400px) {
-  .contenumilieux{
+  .sidebar{
+    width: 0;
+  }
+  .sidebar.active{
+    width: 60px;
+  }
+  .home-section{
     width: 100%;
     left: 0;
+  }
+  .sidebar.active ~ .home-section{
+    left: 60px;
+    width: calc(100% - 60px);
+  }
+  .home-section nav{
+    width: 100%;
+    left: 0;
+  }
+  .sidebar.active ~ .home-section nav{
+    left: 60px;
+    width: calc(100% - 60px);
   }
 }
