--- a/src/app/Restaurateur/menu/menu.component.html
+++ b/src/app/Restaurateur/menu/menu.component.html
@@ -1,28 +1,11 @@
-<app-dashboard-admin></app-dashboard-admin>
+<app-dasboard-resto></app-dasboard-resto>
 <section class="home-section">
-<!-- debut du contenu de la page blog dashboard admin -->
 <div>
-  <div *ngIf="isMenuandPlats">
-    <h3 class="text-center mt-2 fw-bold titremere-blog" >Listes des plats</h3>
-    <div class="d-flex justify-content-between">
-      <div>
-        <button class="btn fw-bold  boutonajouter-blog me-4" data-bs-toggle="modal" data-bs-target="#ajoutplat" (click)="toggleForm()">Ajouter menu</button>
-        <button class="btn fw-bold  boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat" >Ajouter un plat</button>
-      </div>
-        <div class="search">
-          <div class="input-group mb-3">
-              <input type="text" class="form-control inputPorteur" placeholder="Chercher un plat">
-              <button class="input-group-text iconsearch" id="basic-addon1"><i class="bi bi-search"></i></button>
-          </div>
-      </div>
-    </div>
-  </div>
-  <div *ngIf="!isMenuandPlats">
+  <div>
     <h3 class="text-center mt-2 fw-bold titremere-blog" >Listes des menu</h3>
     <div class="d-flex justify-content-between">
       <div>
-        <button class="btn fw-bold  boutonajouter-blog me-4" data-bs-toggle="modal" data-bs-target="#ajoutplat">Ajouter menu</button>
-        <button class="btn fw-bold  boutonajouter-blog " data-bs-toggle="modal" data-bs-target="#ajoutplat" (click)="toggleForm()">Ajouter un plat</button>
+        <button class="btn fw-bold  boutonajouter-blog me-4" data-bs-toggle="modal" data-bs-target="#ajoutermenu">Ajouter menu</button>
       </div>
         <div class="search">
           <div class="input-group mb-3">
@@ -33,279 +16,83 @@
     </div>
   </div>
 </div>
-  
-  <!-- les contenue de la page avec les carte -->
-  <!-- <div class="container mt-4 mb-5">
-  <div class="row">
-    <div class="col-12 col-md-4">
-      <div class="card border mb-2 rounded-4 ">
-        <img src="" alt="">
-        <div class="bodyplat px-4">
-          <h3 class="mt-3 text-center">Nom plat</h3>
-          <img src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width="200px" class="my-1 me-1">
-          <p class="limited-height">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sed modi porro eius eligendi unde nulla ipsa cum repellendus inventore, aut laborum</p>
-          <div class="btnplat mb-3 d-flex justify-content-center">
-            <button class="btn boutondetails-blog" data-bs-toggle="modal" data-bs-target="#detailplat">Détails</button>
-            <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editplatModal">Modifier</button>
-            <button class="btn  boutonsupprim-blog">Supprimer</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div class="card border mb-2 rounded-4 ">
-        <img src="" alt="">
-        <div class="bodyplat px-4">
-          <h3 class="mt-3 text-center">Nom plat</h3>
-          <img src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width="200px" class="my-1 me-1">
-          <p class="limited-height">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sed modi porro eius eligendi unde nulla ipsa cum repellendus inventore, aut laborum</p>
-          <div class="btnplat mb-3 d-flex justify-content-center">
-            <button class="btn boutondetails-blog" data-bs-toggle="modal" data-bs-target="#detailplat">Détails</button>
-            <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editplatModal">Modifier</button>
-            <button class="btn  boutonsupprim-blog">Supprimer</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div class="card border mb-2 rounded-4 ">
-        <img src="" alt="">
-        <div class="bodyplat px-4">
-          <h3 class="mt-3 text-center">Nom plat</h3>
-          <img src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width="200px" class="my-1 me-1">
-          <p class="limited-height">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sed modi porro eius eligendi unde nulla ipsa cum repellendus inventore, aut laborum</p>
-          <div class="btnplat mb-3 d-flex justify-content-center">
-            <button class="btn boutondetails-blog" data-bs-toggle="modal" data-bs-target="#detailplat">Détails</button>
-            <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editplatModal">Modifier</button>
-            <button class="btn  boutonsupprim-blog">Supprimer</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div class="card border mb-2 rounded-4 ">
-        <img src="" alt="">
-        <div class="bodyplat px-4">
-          <h3 class="mt-3 text-center">Nom plat</h3>
-          <img src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width="200px" class="my-1 me-1">
-          <p class="limited-height">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sed modi porro eius eligendi unde nulla ipsa cum repellendus inventore, aut laborum</p>
-          <div class="btnplat mb-3 d-flex justify-content-center">
-            <button class="btn boutondetails-blog" data-bs-toggle="modal" data-bs-target="#detailplat">Détails</button>
-            <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editplatModal">Modifier</button>
-            <button class="btn  boutonsupprim-blog">Supprimer</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <div class="card border mb-2 rounded-4 ">
-        <img src="" alt="">
-        <div class="bodyplat px-4">
-          <h3 class="mt-3 text-center">Nom plat</h3>
-          <img src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" width="200px" class="my-1 me-1">
-          <p class="limited-height">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sed modi porro eius eligendi unde nulla ipsa cum repellendus inventore, aut laborum</p>
-          <div class="btnplat mb-3 d-flex justify-content-center">
-            <button class="btn boutondetails-blog" data-bs-toggle="modal" data-bs-target="#detailplat">Détails</button>
-            <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editplatModal">Modifier</button>
-            <button class="btn  boutonsupprim-blog">Supprimer</button>
-          </div>
-        </div>
-      </div>
+  <!-- Affichage des menus -->
+  <div>
+  <div class="card w-75" style="margin-top: 8%; border: 2px solid red; margin-left: 15%; border: 1px solid #F7E801;">
+    <div class="card-body">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col" style="background-color: #FFA07A; font-weight: bold;">#</th>
+            <th scope="col" style="background-color: #FFA07A; font-weight: bold;">Nom</th>
+            <th scope="col" style="background-color: #FFA07A; font-weight: bold;">Date</th>
+            <th scope="col" style="background-color: #FFA07A; font-weight: bold;">Action</th>
+          </tr>
+        </thead>
+        <tbody *ngFor="let menu of menus">
+          <tr>
+            <th scope="row">{{ menu.id }}</th>
+            <td>{{ menu.titre }}</td>
+            <td>{{ menu.created_at | date:'dd/MM/yyyy' }}</td>
+            <td>
+              <ul class="d-flex list-group list-group-horizontal">
+                <li class="list-group-item" data-bs-toggle="modal" data-bs-target="#editmenuModal" (click)="editmenuModal(menu.id, menu.titre)"><i class="bi bi-pencil-square"></i></li>
+                <li class="list-group-item" (click)="deletemenu(menu.id)"><i class="bi bi-trash3"></i></li>
+              </ul>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
-  </div> -->
-  <div class="container mt-4 mb-5">
-    <div class="row">
-      <div class="col-12 col-md-4" *ngFor="let plat of  plats ">
-        <div class="card border mb-2 rounded-4 ">
-          <img [src]="plat.photo" class="img-fluid" alt="Image plat">
-          <div class="bodyplat px-4">
-            <h3 class="mt-3 text-center">{{ plat.titre }}</h3>
-            <p class="limited-height">{{ plat.description }}</p>
-            <div class="btnplat mb-3 d-flex justify-content-center">
-              <button class="btn boutondetails-blog" (click)="showPlatDetails()" data-bs-toggle="modal" data-bs-target="#detailArticle">Détails</button>
-              <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editArticleModal"
-                (click)="editPlat()">Modifier</button>
-              <button class="btn  boutonsupprim-plat" (click)="deletePlat()">Supprimer</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  <!-- les contenue de la page avec les carte -->
   
-  <!-- fin du contenu de la page blog dashboard admin -->
-  
-  <!-- pagination -->
-  <div class="pagin d-flex justify-content-center">
-  <nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item" >
-        <a class="page-link" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-        </a>
-      </li>
-      <li class="page-item ">
-        <a class="page-link active" ></a>
-      </li>
-      <li class="page-item" >
-        <a class="page-link" aria-label="Next">
-          <span aria-hidden="true">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-  </div>
-  <!-- pagination -->
-  
-  
-  <!-- debut model d'ajoute d'un plat dans le blog --> 
-  <div class="modal fade" id="ajoutplat" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <!-- Ajout d'un menu -->
+  <div class="modal fade" id="ajoutermenu" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title w-100 fs-4 titreAjout text-center">Ajouter un plat</h1>
+          <h1 class="modal-title w-100 fs-4 titreAjout text-center">Ajouter un menu</h1>
           <button type="button" class="btn btn-closeAjout" data-bs-dismiss="modal" id="close-modal"><i class="bi bi-x-lg"></i></button>
         </div>
         <div class="modal-body">
-            <form class="ajoutplat">
-              <div class="mb-3">
-                <label for="titreplat">Titre du plat:</label>
-                <input class="form-control" type="text" id="titreplat" name="titreplat" required>
-              </div>
-  
-              <div class="mb-4">
-                <label for="inputImage" class="form-label">Prix</label>
-                <input type="text" class="form-control" id="inputGroupFile02" name="platPhoto">
-              </div>
-
-              <div class="mb-4">
-                <label for="inputImage" class="form-label ">Image</label>
-                <input type="text" class="form-control" id="inputGroupFile02" name="platPhoto">
-              </div>
-            
-              <div class="mb-3">
-                <label for="descriptionplat">Description de l'plat:</label>
-                <textarea class="form-control description-plat" type="text" id="descriptionplat" name="descriptionplat" required></textarea>
-              </div>
-            
-              <button class="btn btn-add" type="submit">Ajouter</button>
-            </form>
+          <form class="titremenu" (ngSubmit)="addmenu()">
+            <div class="mb-3">
+              <label for="titremenu">Titre du menu:</label>
+              <input class="form-control" type="text" id="titremenu" name="titremenu" required [(ngModel)]="newmenu">
+            </div>
+            <button class="btn btn-add" type="submit">Ajouter</button>
+          </form>
         </div>
       </div>
     </div>
   </div>
-  <!-- fin du model d'ajoute d'un plat dans le blog -->
   
-  
-  
-  <!-- debut du model de modification  -->
-  <div class="modal fade" id="editplatModal" tabindex="-1" aria-labelledby="modifierLabel" aria-hidden="true">
+  <!-- Édition d'un menu -->
+  <div class="modal fade" id="editmenuModal" tabindex="-1" aria-labelledby="modifierLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title titreMdfplat w-100 text-center fs-3" id="modifierLabel">Modifier plat</h1>
+          <h1 class="modal-title titreMdfmenu w-100 text-center fs-3" id="modifierLabel">Modifier menu</h1>
           <button type="button" class="btn btn-closeAjout" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x-lg"></i></button>
         </div>
         <div class="modal-body">
-            <form class="mdfplat">
-              <div class="mb-3">
-                <label for="editTitle">Nouveau titre:</label>
-                <input id="editTitle" class="form-control" name="titre" required>
-              </div>
-            
-              <div class="mb-3">
-                <label for="editPhoto">Nouvelle Prix:</label>
-                <input id="editPhoto " class="form-control" name="photo" required>
-              </div>
+          <form class="mdfmenu" (ngSubmit)="editmenu(editingMenu.id, editedTitre)">
+            <div class="mb-3">
+              <label for="editTitle">Nouveau titre:</label>
+              <input id="editTitle" class="form-control" name="titre" required [(ngModel)]="editedTitre">
+            </div>
+            <div class="mdfBtns d-flex justify-content-between">
+              <button type="submit" class="btn btnUpdate" data-bs-dismiss="modal">Enregistrer</button>
+              <button type="button" class="btn btnAnnuler" data-bs-dismiss="modal">Annuler</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 
-              <div class="mb-3">
-                <label for="editPhoto">Nouvelle photo:</label>
-                <input id="editPhoto " class="form-control" name="photo" required>
-              </div>
-            
-              <div class="mb-3">
-                <label for="editDescription">Nouvelle description:</label>
-                <textarea id="editDescription" class="form-control" name="description"
-                  required></textarea>
-              </div>
-            
-              <div class="mdfBtns d-flex justify-content-between">
-                <button type="submit" class="btn btnUpdate" data-bs-dismiss="modal">Enregistrer</button>
-                <button type="button" class="btn btnAnnuler" data-bs-dismiss="modal" >Annuler</button>
-              </div>
-            </form>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- fin du model de modification  -->
-  
-  <!-- debut du model plat details -->
-  <div class="modal fade" id="detailplat" tabindex="-1" aria-labelledby="detailplat" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable modal-lg modal-sm">
-    <div class="modal-content container">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="detailplatLabel">Details du plat</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="d-flex flex-column">
-          <div class="row">
-            <div class="col">
-           <div class="w-75 mx-auto">
-            <img class="img-fluid rounded-4 imageplat-detailblog" src="https://images.pexels.com/photos/1211887/pexels-photo-1211887.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" >
-           </div>
-           <div>
-            <h2 class="text-start">Prix: 1500 fcfa</h2>
-           </div>
-           <div>
-            <p class="text-start">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum praesentium at neque ex saepe beatae, ullam modi aut nobis in non numquam rem tenetur ab nulla consequatur soluta sunt eaque.</p>
-           </div>
-          </div>
-        </div>    
-        </div>
-      </div>
-      <div class="modal-footer">
-        <div class="d-flex justify-content-end mb-4 mx-2">
-          <button class="btn btnUpdate me-3" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Commentaires</button>
-          <button class="btn btnCloseDetail" data-bs-dismiss="modal">Fermer</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-  <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered modal-lg modal-sm ">
-    <div class="modal-content container">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5 " id="exampleModalToggleLabel2">Commentaires</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <!-- debut Liste des messages des commentaires -->
-  <h3 class="fw-bold text-center titremere-contact my-3">La liste des commentaires</h3>
-  <div class="row gap-2">
-    <div class="col-sm-12 col-lg-12 col-lg-12">
-        <div class="card">
-            <div class="card-header titre-carte-contact">
-              Rare Diallo
-            </div>
-            <div class="card-body">
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat mollitia consequuntur omnis expedita aliquid, aut, in hic, pariatur repellendus ea provident recusandae vero! Laboriosam perferendis minus ipsa recusandae voluptatem!
-              </p>
-            </div>
-        </div>
-    </div>
-  </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-primary" data-bs-target="#detailplat" data-bs-toggle="modal">Retourner </button>
-      </div>
-    </div>
-  </div>
-  </div>
-  <!-- fin du model plat details -->
+   
 </section>
+
+
