--- a/src/app/Utilisateur/contact/contact.component.html
+++ b/src/app/Utilisateur/contact/contact.component.html
@@ -1,6 +1,19 @@
 <app-header></app-header>
 
-<div class="card mb-3 h-100 my-4">
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner carouselBaniere">
+    <div class="carousel-item h-100 active">
+      <img src="../../../assets/banierplats.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil" >
+    </div>
+    <div class="carousel-item h-100 ">
+      <img src="../../../assets/baniertout.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil">
+    </div>
+    <div class="carousel-item h-100">
+      <img src="../../../assets/baniersucre.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil">
+    </div>
+  </div>
+</div>
+<div class="card mb-3 h-75 my-4">
     <div class="row g-0">
       <div class="col-md-4">
         <img src="../../../assets/contact.png" class="img-fluid rounded-start" alt="...">
@@ -38,3 +51,5 @@
       </div>
     </div>
   </div>
+  
+<app-footer></app-footer>
