--- a/src/app/Utilisateur/restaurant/restaurant.component.html
+++ b/src/app/Utilisateur/restaurant/restaurant.component.html
@@ -1,5 +1,17 @@
 <app-header></app-header>
-
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner carouselBaniere">
+    <div class="carousel-item h-100 active">
+      <img src="../../../assets/banierplats.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil" >
+    </div>
+    <div class="carousel-item h-100 ">
+      <img src="../../../assets/baniertout.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil">
+    </div>
+    <div class="carousel-item h-100">
+      <img src="../../../assets/baniersucre.png" class="d-block w-100 h-100" alt="carousel de la page d'accueil">
+    </div>
+  </div>
+</div>
 <!-- section de resto avec ces cartes -->
 <div class="w-100 mx-auto me-5 my-4">
     <div class="d-flex justify-content-between my-4 gap-4">
@@ -37,7 +49,7 @@
               <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
             </div>
             <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
+                <button class="boutonCommandeDts rounded rounded-5 px-3" routerLink="/detailsrestaurant">Commander</button>
             </div>
           </div>
         </div>
@@ -54,7 +66,7 @@
               <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
             </div>
             <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
+                <button class="boutonCommandeDts rounded rounded-5 px-3" routerLink="/detailsrestaurant">Commander</button>
             </div>
           </div>
         </div>
@@ -71,7 +83,7 @@
               <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
             </div>
             <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
+                <button class="boutonCommandeDts rounded rounded-5 px-3" routerLink="/detailsrestaurant">Commander</button>
             </div>
           </div>
         </div>
@@ -88,7 +100,7 @@
               <p class="card-text">Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque</p>
             </div>
             <div class="card-footer rounded rounded-4 cardFooterResto d-flex justify-content-end">
-                <button class="boutonCommandeDts rounded rounded-5 px-3">Commander</button>
+                <button class="boutonCommandeDts rounded rounded-5 px-3" routerLink="/detailsrestaurant">Commander</button>
             </div>
           </div>
         </div>
