--- a/src/app/Administrateur/client/client.component.html
+++ b/src/app/Administrateur/client/client.component.html
@@ -5,7 +5,7 @@
       <table class="table">
         <thead>
           <tr>
-            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Photo</th>
+            <th scope="col" style="background-color: #FFA07A;font-weight:bold;">id</th>
             <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Nom</th>
             <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Lieux</th>
             <th scope="col" style="background-color: #FFA07A;font-weight:bold;">Telephone</th>
