--- a/src/app/Utilisateur/propos/propos.component.html
+++ b/src/app/Utilisateur/propos/propos.component.html
@@ -82,8 +82,8 @@
             </div>
             <div class="bottom JeanDenom">
                 <div class="content">
-                    <span class="name">Abdoulaye Diallo</span>
-                    <span class="about-me">Bénévole </span>
+                    <span class="name">Thierno M B Diallo</span>
+                    <span class="about-me">Dev front </span>
                 </div>
                <div class="bottom-bottom">
                 <div class="social-links-container">
@@ -103,12 +103,12 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail"><rect width="20" height="16" x="2" y="4" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></svg>
             </button>
             <div class="profile-pic JeanDephoto">
-              <img src="https://images.pexels.com/photos/2955376/pexels-photo-2955376.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+              <img src="https://images.pexels.com/photos/935985/pexels-photo-935985.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
             </div>
             <div class="bottom JeanDenom">
                 <div class="content">
-                    <span class="name">Abdoulaye Diallo</span>
-                    <span class="about-me">Bénévole </span>
+                    <span class="name">Yaye Rokhaya Diaw</span>
+                    <span class="about-me">Dev Back-end </span>
                 </div>
                <div class="bottom-bottom">
                 <div class="social-links-container">
@@ -132,8 +132,8 @@
             </div>
             <div class="bottom JeanDenom">
                 <div class="content">
-                    <span class="name">Abdoulaye Diallo</span>
-                    <span class="about-me">Bénévole </span>
+                    <span class="name">Mariama Sambou</span>
+                    <span class="about-me">Designer </span>
                 </div>
                <div class="bottom-bottom">
                 <div class="social-links-container">
@@ -148,8 +148,11 @@
                </div>
             </div>
           </div>
+
     </div>
 </div>
+
+<app-propos></app-propos>
 <!-- section equipe -->
 
 
