--- a/src/app/Module/header/header.component.html
+++ b/src/app/Module/header/header.component.html
@@ -5,21 +5,21 @@
     </a>
     <ul id="main-menu" class="top-nav menu clearfix d-flex justify-content-around gap-lg-5 gap-sm-0">
       <li class="menu-item  me-5">
-        <a href=""><img src="https://s3-alpha-sig.figma.com/img/39be/b32f/ac2c6e08b43e58bf83b95d2c4762e576?Expires=1707091200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=G6mg7sz2QY1B8RwelnpHJGiYzbnx~r9hG0Tml0hOucziA7vXreYYSRQZFxQ1cO8wLaoUuqCBXLb9tttvCw7Q5AaUPOtlyGh8JZUJQEiWF3IqMMwwrpsDxi4fJ69NjgmuI8y6wHwsloH3jSR7DSzKhf54Cc4VvWwL6AxdJ~yywxWqK8~uNTckyRBC7g9vC5SThVEk6wtndDvpfeANxTxO9AC1WUHSmsZLTcvS9YxktBoKmhn~ppgHKjv-8Qk3huWMobXrz1Lvz1-P-K-qgW1fw5Q99PiV4tJPPX6CxjMI43RcVoUpUkzmCvypncOMcPbC8~qXG0r96dMAc7KIbF4ujA__" alt="Logo d'easyleek" ></a>
+        <a href=""><img src="/assets/logoE.png" alt="Logo d'easyleek" ></a>
       </li>
       <li>
         <ul>
           <li class="menu-item text-black">
-            <a href=" # " routerLink="/accueil" routerLinkActive="active">Acuueil</a>
+            <a routerLink="/accueil" routerLinkActive="active">Acuueil</a>
           </li>
           <li class="menu-item text-black">
-            <a href=" # " routerLink="/restaurant" routerLinkActive="active">Restaurant</a>
+            <a routerLink="/restaurant" routerLinkActive="active">Restaurant</a>
           </li>
           <li class="menu-item text-black">
-            <a href=" # " routerLink="/propos" routerLinkActive="active">A propos</a>
+            <a routerLink="/propos" routerLinkActive="active">A propos</a>
           </li>
           <li class="menu-item text-black">
-            <a href=" # " routerLink="/contact" routerLinkActive="active">Contact</a>
+            <a routerLink="/contact" routerLinkActive="active">Contact</a>
           </li>
         </ul>
       </li>
