--- a/src/app/Utilisateur/contact/contact.component.html
+++ b/src/app/Utilisateur/contact/contact.component.html
@@ -13,7 +13,8 @@
     </div>
   </div>
 </div>
-<div class="card mb-3 h-75 my-4">
+
+<div class="card mb-3 h-75 my-4 w-75 mx-auto">
     <div class="row g-0">
       <div class="col-md-4">
         <img src="../../../assets/contact.png" class="img-fluid rounded-start" alt="...">
