--- a/src/app/Administrateur/restaurateur/restaurateur.component.html
+++ b/src/app/Administrateur/restaurateur/restaurateur.component.html
@@ -13,6 +13,11 @@
     </div>
   </div>
 </div>
+<div class="d-flex justify-content-center">
+  <button class="btn fw-bold me-3 boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Liste des Restaurants</button>
+  <button class="btn fw-bold me-3  boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Restaurant Active</button>
+  <button class="btn fw-bold me-3 boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Restaurant Desactiver</button>
+</div>
 <div class="card w-75" style="margin-top: 8%; border: 2px solid red; margin-left: 15%; border: 1px solid #F7E801;">
   <div class="card-body">
     <table class="table">
@@ -36,8 +41,10 @@
               <!-- Bouton pour voir les détails -->
               <li class="list-group-item" data-bs-toggle="modal" data-bs-target="#detailrestaurateurModal" (click)="getDetailsRestaurant(restaurateur)"><i class="bi bi-eye"></i></li>
               <!-- Bouton pour supprimer le restaurant -->
-              <li class="list-group-item" (click)="toggleBlockStatus()">
-                <i [class]="restaurateur.isBlocked ? 'bi-unlock' : 'bi-trash3'"></i>
+              <li class="list-group-item">
+                <!-- <i [class]="restaurateur.isBlocked ? 'bi-unlock' : 'bi-trash3'"></i> -->
+                <i class="bi bi-person-fill-check"></i>
+                <i class="bi bi-person-fill-lock"></i>
               </li>
             </ul>
           </td>
