--- a/src/app/Restaurateur/menu/menu.component.html
+++ b/src/app/Restaurateur/menu/menu.component.html
@@ -38,6 +38,7 @@
               <ul class="d-flex list-group list-group-horizontal">
                 <li class="list-group-item" data-bs-toggle="modal" data-bs-target="#editmenuModal" (click)="editmenuModal(menu.id, menu.titre)"><i class="bi bi-pencil-square"></i></li>
                 <li class="list-group-item" (click)="deletemenu(menu.id)"><i class="bi bi-trash3"></i></li>
+                <li class="list-group-item" data-bs-toggle="modal" data-bs-target="#detailmenuModal" (click)="detail(menu.id)"><i class="bi bi-eye"></i></li>
               </ul>
             </td>
           </tr>
@@ -92,7 +93,32 @@
   </div>
   </div>
 
-   
+  <div class="modal fade" id="detailmenuModal" tabindex="-1" aria-labelledby="detailrestaurateurModalLabel" aria-hidden="true" *ngFor="let selectedMenu of menus">
+    <div class="modal-dialog modal-dialog-scrollable" >
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title w-100 fs-4 titreAjout text-center">Détails du menu</h1>
+          <button type="button" class="btn btn-closeAjout" data-bs-dismiss="modal" id="close-modal"><i class="bi bi-x-lg"></i></button>
+        </div>
+        <div class="modal-body">
+          <div class="d-flex justify-content-between">
+            <div>
+              <h5>Nom du menu:</h5>
+              <p>{{ selectedMenu.titre }}</p>
+            </div>
+            <div>
+              <h5>Date de création:</h5>
+              <p>{{ selectedMenu.created_at | date:'dd/MM/yyyy' }}</p>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-danger"  data-bs-toggle="modal" routerLink="/gestionPlat">Voir Plat</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </section>
 
 
