--- a/src/app/Utilisateur/accueil/accueil.component.css
+++ b/src/app/Utilisateur/accueil/accueil.component.css
@@ -96,7 +96,7 @@
 }
 
 
-@keyframes slideCircles {
+/* @keyframes slideCircles {
     0% {
         transform: translateX(0%);
     }
@@ -107,8 +107,8 @@
 
     100% {
         transform: translateX(-100%);
-    }
-}
+    } */
+/* } */
 
 
 
