--- a/src/app/Module/header/header.component.html
+++ b/src/app/Module/header/header.component.html
@@ -10,7 +10,7 @@
       <li>
         <ul>
           <li class="menu-item text-black">
-            <a routerLink="/accueil" routerLinkActive="active">Acuueil</a>
+            <a routerLink="/accueil" routerLinkActive="active">Accueil</a>
           </li>
           <li class="menu-item text-black">
             <a routerLink="/restaurant" routerLinkActive="active">Restaurant</a>
@@ -35,3 +35,25 @@
       </li>
     </ul>
   </nav>
+
+  <!-- <header class="header">
+    <nav class="navbar">
+        <h2 class="logo"><a href="#"><img src="../../assets/images/logo-ci-la-bokk.png" alt="" height="50px" width="120px" routerLink="/accueil"></a></h2>
+        <input type="checkbox" id="menu-toggle" />
+        <label for="menu-toggle" id="hamburger-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                <path d="M3 12h18M3 6h18M3 18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+            </svg>
+        </label>
+        <ul class="links">
+            <li><a  routerLink="/accueil" >Accueil</a></li>
+            <li><a  routerLink="/restaurant" >Restaurant</a></li>
+            <li><a  routerLink="/propos" >A propos</a></li>
+            <li><a  routerLink="/contact" >Contact</a></li>
+            <li><a  routerLink="/guide" >Guide</a></li>
+        </ul>
+        <div class="buttons">
+            <a href="#" class="signup" routerLink="/login"><i class="bi bi-person-circle"></i> Se connecter</a>
+        </div>
+    </nav>
+</header> -->
