--- a/src/app/Restaurateur/ajouteplat/ajouteplat.component.html
+++ b/src/app/Restaurateur/ajouteplat/ajouteplat.component.html
@@ -7,6 +7,13 @@
         <div class="d-flex justify-content-between">
           <div>
             <button class="btn fw-bold  boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutPlat" >Ajouter un plat</button>
+            <div class="mb-3">
+              <label for="menu">Type de menu:</label>
+              <select id="menu" name="menu_id" [(ngModel)]="menu_id" (change)="onMenuChange()" required>
+                <option *ngFor="let menuTitre of menus" [value]="menuTitre.id">{{ menuTitre.titre }}</option>
+              </select>
+            </div>
+            
           </div>
             <div class="search">
               <div class="input-group mb-3">
@@ -17,25 +24,29 @@
         </div>
       </div>
     <!-- les contenue de la page avec les carte -->
-  <div class="container mt-4 mb-5">
-    <div class="row">
-      <div class="col-12 col-md-4" *ngFor="let plat of plats">
-        <div class="card border mb-2 rounded-4 ">
-          <img [src]="plat.photo" class="img-fluid" alt="Image article">
-          <div class="bodyArticle px-4">
-            <h3 class="mt-3 text-center">{{ plat.titre }}</h3>
-            <p class="limited-height">{{plat.description }}</p>
-            <div class="btnArticle mb-3 d-flex justify-content-center">
-              <button class="btn boutondetails-blog" (click)="showPlatDetails(plat)" data-bs-toggle="modal" data-bs-target="#detailArticle">Détails</button>
-              <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editPlatModal"
-                (click)=" editPlat(plat)">Modifier</button>
-              <button class="btn  boutonsupprim-blog" (click)="deletePlat(plat.id ?? -1)">Supprimer</button>
+    <div class="container mt-4 mb-5" >
+      <!-- *ngFor="let plat of plats" -->
+      <div class="row">
+        <div class="col-12 col-md-4" *ngFor="let plat of plats">
+          <div class="card border mb-2 rounded-4">
+            <img src="http://127.0.0.1:8000/images/{{plat.image}}" class="img-fluid" alt="Image article">
+            <div class="bodyArticle px-4">
+               <h3 class="mt-3 text-center">{{ plat.libelle }}</h3>
+              <p class="limited-height">{{ plat.descriptif }}</p>
+              <div class="btnArticle mb-3 d-flex justify-content-center">
+                <!-- (click)="showPlatDetails(plat)" -->
+                <button class="btn boutondetails-blog" data-bs-toggle="modal" data-bs-target="#exampledetailsplats" (click)="showDetailsModal(plat.id)">Détails</button>
+                  <!-- (click)="editPlat(plat)" -->
+                  <button class="btn mx-3 boutonmodif-blog" data-bs-toggle="modal" data-bs-target="#editPlatModal" (click)="editmenuModal(plat.id)">Modifier</button>
+                  <!-- (click)="deletePlat(plat.id ?? -1)" -->
+                  <button class="btn boutonsupprim-blog" (click)="supprimerPlat(plat.id)">Supprimer</button>
+                </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    </div>
+    
     <!-- les contenue de la page avec les carte -->
       <!-- debut model d'ajoute d'un plat dans le blog --> 
       <div class="modal fade" id="ajoutPlat" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -46,14 +57,15 @@
               <button type="button" class="btn btn-closeAjout" data-bs-dismiss="modal" id="close-modal"><i class="bi bi-x-lg"></i></button>
             </div>
             <div class="modal-body">
-                <form class="ajoutArticle" (ngSubmit)="addPlat()">
+                <form class="ajoutArticle" (ngSubmit)="addPlat()"
+                enctype="multipart/form-data">
                   <div class="mb-3">
                     <label for="titreArticle">Titre du plat:</label>
-                    <input class="form-control" type="text" id="titreArticle" name="libelle" [(ngModel)]="libelle" required>
+                    <input class="form-control" type="text" id="titreArticle" name="libelle" [(ngModel)]="libelle" >
                   </div>
                   <div class="mb-3">
                     <label for="titreArticle">Prix:</label>
-                    <input class="form-control" type="number" id="titreArticle" name="prix" [(ngModel)]="prix" required>
+                    <input class="form-control" type="number" id="titreArticle" name="prix" [(ngModel)]="prix" >
                   </div>
       
                   <div class="mb-4">
@@ -64,12 +76,12 @@
                   <div class="mb-3">
                     <label for="descriptionArticle">Description de l'article:</label>
                     <textarea class="form-control description-article" type="text" id="descriptif" name="descriptif"
-                      [(ngModel)]="descriptif" required></textarea>
+                      [(ngModel)]="descriptif" ></textarea>
                   </div>
 
                   <div class="mb-3">
                     <label for="menu">Type de menu:</label>
-                    <select id="menu" name="menu_id" [(ngModel)]="menu_id"  required>
+                    <select id="menu" name="menu_id" [(ngModel)]="menu_id"  >
                       <option *ngFor="let menuTitre of menus" [value]="menuTitre.id">{{ menuTitre.titre }}</option>
                     </select>
                   </div>
@@ -82,6 +94,66 @@
         </div>
       </div>
       <!-- fin du model d'ajoute d'un article dans le blog -->
+
+      <!-- modal pour modifier un plat  -->
+      <div class="modal fade" id="editPlatModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title w-100 fs-4 titreAjout text-center">Modifier un Plat</h1>
+              <button type="button" class="btn btn-closeAjout" data-bs-dismiss="modal" id="close-modal"><i class="bi bi-x-lg"></i></button>
+            </div>
+            <div class="modal-body">
+                <form class="ajoutArticle" (ngSubmit)="modifierPlat(newPlat ,newPlat)"
+                enctype="multipart/form-data">
+                  <div class="mb-3">
+                    <label for="titreArticle">Nouvelle Nom:</label>
+                    <input class="form-control" type="text" id="titreArticle" name="libelle" [(ngModel)]="libelle" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="titreArticle">Nouvelle Prix:</label>
+                    <input class="form-control" type="number" id="titreArticle" name="prix" [(ngModel)]="prix" required>
+                  </div>
+      
+                  <div class="mb-4">
+                    <label for="inputImage" class="form-label">Nouvelle Image</label>
+                    <input type="file" class="form-control" id="inputGroupFile02" name="image" (change)="getFile($event)" accept="image/*">
+                  </div>
+                
+                  <div class="mb-3">
+                    <label for="descriptionArticle">Nouvelle Description:</label>
+                    <textarea class="form-control description-article" type="text" id="descriptif" name="descriptif"
+                      [(ngModel)]="descriptif" required></textarea>
+                  </div>
+
+                  <button class="btn btn-add" type="submit">Modifier</button>
+                </form>
+            </div>
+          </div>
+        </div>
+      </div>
     
+      <!-- modal details d'un plat -->
+
+<!-- Modal -->
+<div class="modal fade" id="exampledetailsplats" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h2>{{libelle}}</h2>
+        <h2>{{prix}}</h2>
+        <h2>{{descriptif}}</h2>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
   </div>
   </section>
