--- a/src/app/Restaurateur/commande/commande.component.html
+++ b/src/app/Restaurateur/commande/commande.component.html
@@ -4,7 +4,7 @@
     <h3 class="text-center mt-2 fw-bold titremere-blog">Les commandes</h3>
     <div class="d-flex justify-content-between">
         <div>
-            <button class="btn fw-bold me-3 boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">En attente</button>
+            <button class="btn fw-bold me-3 boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Liste</button>
             <button class="btn fw-bold me-3  boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">En cours</button>
             <button class="btn fw-bold me-3 boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Livraison</button>
             <button class="btn fw-bold boutonajouter-blog" data-bs-toggle="modal" data-bs-target="#ajoutplat">Termine</button>
